# untitled-music-app

./: .env.example  .gitignore  app.spec  main.py  mdconverter.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build.yml
audio/api/: jellyfin.py
qml/: main.qml
src/untitledmusicplayer/: app.py  config.py
src/untitledmusicplayer/audio/api/: jellyfin.py
src/untitledmusicplayer/elements/: JellyfinAPIBridge.py  JellyfinAuthForm.py
src/untitledmusicplayer/models/: album.py
src/untitledmusicplayer/qml/: main.qml
src/untitledmusicplayer/qml/components/: Card.qml
src/untitledmusicplayer/qml/pages/: AlbumList.qml  Welcome.qml
